@@ -8,6 +8,11 @@
    2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2021-02-15 14:20 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
+  * utils/tutorial/tutor_eng.xml
+    * New module added, "Let create new control", which demonstrates,
+      how to create a new control in an application, using a slider as an example.
+
 2021-02-13 17:54 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * source/gtk/control.c
     * Added third parameter to hwg_SetFgColor() -
